fixed spacing between featured products

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -213,10 +213,6 @@ main {
   position: relative;
 }
 
-.banner-container .slick-slide img {
-  height: 100%;
-}
-
 .slick-arrow {
   background-color: transparent !important;
 }
@@ -345,15 +341,19 @@ main {
   position: absolute;
   top: 45%;
   background-color: var(--primary-color) !important;
-  padding: 1rem 1.5rem;
   border-radius: 10rem;
   margin: 0 1rem;
   opacity: 1 !important;
   transition: opacity 1s ease;
 }
 
+.featured-center .product img, .featured-center .product p {
+  width: 98%;
+  margin: auto;
+}
+
 .featured-center .slider-btn .prev, .featured-center .slider-btn .next {
-  padding: 1rem 1.5rem;
+  padding: .5rem 1rem;
   border-radius: 10rem;
   margin: 0 1rem;
   opacity: 0 !important;
@@ -445,6 +445,7 @@ main {
 /* featured */
 
 .featured {
+  padding: 3rem 0;
   text-align: center;
 }
 
@@ -989,7 +990,7 @@ button.cartitem-addremove {
 .price-top {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 3px;
   background: rgba(72, 72, 73, 0.8);
   color: var(--mainWhite);
   padding: 0.3rem 0.6rem 0.5rem;
@@ -1009,7 +1010,7 @@ button.cartitem-addremove {
 .price-top-right {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 3px;
   border-bottom-left-radius: 1rem;
   font-size: 0.5rem;
   font-weight: bold;
